--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -207,6 +207,15 @@ function createForcesGraphOn(elementId, graph) {
             return quickFind.areConnected(eachNode.index, node.index);
         });
     };
+    GraphEditor.prototype.immediateConnectionsOf = function(node) {
+        var result = this.graph.links.map(function(link) {
+            if (link.source == node) return link.target;
+            else if (link.target == node) return link.source;
+            else return null;
+        }).filter(function(it) { return it != null; });
+        result.push(node);
+        return result;
+    };
 
     var width = 1100,
         height = 700;
