changed tooltip text

--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -266,7 +266,7 @@
 
             rootElement.select("#footer").remove();
             var footer = rootElement.append("span").attr("id", "footer").style("display", "block").style("width", width + "px")
-            footer.append("div").style({color: "#999", float: "right"}).html("alt+click on word to exclude it");
+            footer.append("div").style({color: "#999", float: "right"}).html("alt+click to exclude a word");
         }
 
         function adjustSizeOfShortWords(words) {
