folder for unused templates

--- a/templates/unused/commit_size_histogram_template.html
+++ b/templates/unused/commit_size_histogram_template.html
@@ -15,7 +15,7 @@
     }
 </style>
 <body>
-<script src="d3.v3.min.js"></script>
+<script src="../d3.v3.min.js"></script>
 <script>
     const rawData = /*data_placeholder*/"\
 commit size\n\
