--- a/templates/unused/stacked_bars.html
+++ b/templates/unused/stacked_bars.html
@@ -27,7 +27,7 @@
     }
 </style>
 <body>
-<script src="d3.v3.min.js"></script>
+<script src="../d3.v3.min.js"></script>
 <script>
     var rawData = /*data_placeholder*/"\
 date,author,amount of commits\n\
