--- a/templates/time-between-commits-histogram.html
+++ b/templates/time-between-commits-histogram.html
@@ -10,6 +10,9 @@
         fill: steelblue;
         shape-rendering: crispEdges;
     }
+    .bar rect:hover {
+        fill: rgb(62, 104, 146);
+    }
     .axis path, .axis line {
         fill: none;
         stroke: #aaa;
@@ -1403,13 +1406,12 @@ metric\n\
 
     function timeIntervalFormat(milliseconds) {
         var seconds = Math.floor(milliseconds / 1000);
-        if (seconds < 60) return seconds + " sec";
         var minutes = Math.floor(seconds / 60);
-        if (minutes < 60) return minutes + " mins";
+        if (minutes < 60) return minutes + " min";
         var hours = Math.floor(minutes / 60);
         if (hours < 24) return hours + " hours";
         var days = Math.floor(hours / 24);
-        return days + " days"; // TODO fix "2 days 2 days"
+        return days + " days"; // TODO labels with same text, e.g. "2 days, 2 days"
     }
 
     function yAxisFormat(n) {
