prefix for css; using offsetLeft/Top for graph tooltips

--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -4,18 +4,21 @@
     body {
         background: #f2f2f2;
         margin: 30px;
-        font: 10px sans-serif;
+    }
+    #files-in-the-same-commit,
+    #files-in-the-same-commit text {
+        font: 11px sans-serif;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
-    .node {
+    #files-in-the-same-commit .node {
         stroke: #fff;
         stroke-width: 1.5px;
     }
-    .link {
+    #files-in-the-same-commit .link {
         stroke: #999;
         stroke-opacity: .6;
     }
-    div.tooltip {
+    #files-in-the-same-commit div.tooltip {
         position: absolute;
         text-align: center;
         height: auto;
@@ -26,7 +29,7 @@
         border-radius: 8px;
         pointer-events: none;
     }
-    div.selectedNodesLabel {
+    #files-in-the-same-commit div.selectedNodesLabel {
         position: absolute;
         text-align: left;
         height: auto;
@@ -41,7 +44,7 @@
 <head><title>Files in the same commit</title></head>
 <body>
 <script src="d3.v3.min.js"></script>
-<span id="rootElement"></span>
+<span id="files-in-the-same-commit"></span>
 <script>
 
 const graph = {
@@ -137,7 +140,7 @@ var projectName = /*project_name_placeholder*/"some project"/*project_name_place
 var graphName = "Files in the same commit";
 
 
-createForcesGraphOn("rootElement", graph, projectName);
+createForcesGraphOn("files-in-the-same-commit", graph, projectName);
 
 function createForcesGraphOn(elementId, graph, projectName) {
     function QuickFind(size) {
@@ -238,7 +241,7 @@ function createForcesGraphOn(elementId, graph, projectName) {
     var svg = rootElement.append("svg").attr("width", width).attr("height", height);
     var svgLinks = svg.append("g");
     var svgNodes = svg.append("g");
-    var svgPos = svg[0][0].getBoundingClientRect();
+    var svgPos = svg[0][0];
 
     svg.append("rect")
             .attr("width", width).attr("height", height)
@@ -264,16 +267,16 @@ function createForcesGraphOn(elementId, graph, projectName) {
                 .attr("class", "tooltip")
                 .html("Unfortunately, there is nothing to show.")
                 .style("position", "absolute")
-                .style("top", function (){ return svgPos.top + (svgPos.height / 2) - (this.offsetHeight / 2) + "px"; })
-                .style("left", function (){ return svgPos.left + (svgPos.width / 2) - (this.offsetWidth / 2) + "px"; });
+                .style("top", function (){ return svgPos.offsetTop + (svgPos.offsetHeight / 2) - (this.offsetHeight / 2) + "px"; })
+                .style("left", function (){ return svgPos.offsetLeft + (svgPos.offsetWidth / 2) - (this.offsetWidth / 2) + "px"; });
 
     var handledByNode = false;
     var onMouseOverNode = function (d) {
         tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
                 .style("opacity", .9)
                 .style("position", "absolute")
-                .style("left", svgPos.left + parseInt(d.x + 18) + "px")
-                .style("top", svgPos.top + parseInt(d.y - 12) + "px");
+                .style("left", svgPos.offsetLeft + d.x + 18 + "px")
+                .style("top", svgPos.offsetTop + d.y - 18 + "px");
     };
     var onMouseOutOfNode = function() {
         tooltip.style("opacity", .0);
@@ -460,13 +463,13 @@ function createForcesGraphOn(elementId, graph, projectName) {
         if (nodesByGroup[2] == null) nodesByGroup[2] = [];
 
         selectedNodesLabel
-                .style("left", svgPos.left + 3 + "px")
-                .style("top", svgPos.top + 3 + "px")
+                .style("left", svgPos.offsetLeft + 3 + "px")
+                .style("top", svgPos.offsetTop + 3 + "px")
                 .html(nodesByGroup[1].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[1].length > 0 ? 1 : 0));
         var pos = selectedNodesLabel[0][0].getBoundingClientRect();
         selectedNodesLabel2
-                .style("left", svgPos.left + 3 + "px")
+                .style("left", svgPos.offsetLeft + 3 + "px")
                 .style("top", pos.top + pos.height + 3 + "px")
                 .html(nodesByGroup[2].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[2].length > 0 ? 1 : 0));
